[package]
name = "cursorsort"
version = "0.4.0"
edition = "2021"
authors = [ "Harry Law (h5law) <dev@h5law.com>" ]

homepage = "https://github.com/h5law/cursorsort"
repository = "https://github.com/h5law/cursorsort"
documentation = "https://docs.rs/cursorsort"
description = "A QuickSort implementation with a cursor based partitioner and pivot selector"

license-file = "LICENSE"
readme = "README.md"

keywords = [ "sorting", "quicksort", "cursor", "partition", "cursor-based" ]
categories = [ "algorithms", "data-structures" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cursorsort"
path = "src/lib.rs"
crate-type = [ "lib", "cdylib" ]
bench = false

[dependencies]
